# DroneProject

./: .gitignore  CMakeLists.txt
include/: CameraConstants.h  ObjectDetector.h  ObjectDistanceDetector.h  utils.h
models/: classes.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  ObjectDetector.cpp  ObjectDetector.h  ObjectDistanceDetector.cpp  main.cpp  utils.cpp  utils.h
tests/: CMakeLists.txt  test_camera.cpp  test_distance_detector.cpp  test_object_detection.cpp  test_object_detector.cpp
